[compat] refactor code to be compatible with arm64 m1 processor

--- a/conf/.env.example
+++ b/conf/.env.example
@@ -5,3 +5,5 @@ KAFKA_ADDRESS=localhost:9092
 KAFKA_CONSUMER_GROUP=audi.skripsi.lambda_{group_name}
 KAFKA_IN_TOPIC=audi.skripsi.lambda_{topic_name}
 KAFKA_OUT_TOPIC=audi.skripsi.lambda_{topic_name}
+
+NAME_NODE_ADDRESS=localhost:9000
